Fix Next.js scripts to run from correct directory

--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "pnpm --filter @snow-leopard/app dev",
-    "build": "pnpm --filter @snow-leopard/app build",
-    "start": "pnpm --filter @snow-leopard/app start",
-    "lint:app": "pnpm --filter @snow-leopard/app lint",
+    "dev": "cd apps/snow-leopard && pnpm dev",
+    "build": "cd apps/snow-leopard && pnpm build",
+    "start": "cd apps/snow-leopard && pnpm start",
+    "lint:app": "cd apps/snow-leopard && pnpm lint",
     "db:generate": "pnpm --filter @snow-leopard/db db:generate",
     "db:migrate": "pnpm --filter @snow-leopard/db db:migrate",
     "db:studio": "pnpm --filter @snow-leopard/db db:studio",
